--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -1,5 +1,9 @@
 <h3 class="mb-3 text-[24px] font-bold">Change password</h3>
-<form class="flex w-full flex-col gap-2" [formGroup]="changePasswordForm" (ngSubmit)="onSubmit()">
+<form
+  [ngClass]="{ 'pointer-events-none': loading }"
+  class="flex w-full flex-col gap-2"
+  [formGroup]="changePasswordForm"
+  (ngSubmit)="onSubmit()">
   <mat-form-field>
     <mat-label>Old password</mat-label>
     <input
@@ -36,9 +40,8 @@
       New password is <strong>required</strong>
     </mat-error>
   </mat-form-field>
-  <button type="submit" mat-raised-button>Change password</button>
+  <button type="submit" mat-raised-button>
+    <mat-spinner *ngIf="loading" diameter="20" /> <span *ngIf="!loading">Change password</span>
+  </button>
   <span class="mb-2 justify-end text-center font-semibold text-red" *ngIf="submitError">{{ submitError }}</span>
-  <span class="mb-2 text-center font-semibold text-light-green" *ngIf="submitSuccess"
-    >Your password has been changed successfully!</span
-  >
 </form>
