--- a/src/app/applicants/applicants.component.html
+++ b/src/app/applicants/applicants.component.html
@@ -1,11 +1,16 @@
-<h3 class="mb-5 text-[36px] font-bold">Organization jobs</h3>
-<ul class="flex w-full flex-col gap-5">
-  <li *ngFor="let job of jobs; trackBy: trackById">
-    <app-applicant-item
-      (jobDeactivated)="onJobDeactivated($event)"
-      (jobActivated)="onJobActivated($event)"
-      (jobEdited)="onJobEdited($event)"
-      [job]="job"></app-applicant-item>
-  </li>
-</ul>
-<p *ngIf="jobs?.length === 0" class="text-[24px] font-semibold">No jobs...</p>
+<div *ngIf="loading" class="flex h-[90vh] items-center justify-center">
+  <mat-spinner diameter="60"></mat-spinner>
+</div>
+<div *ngIf="!loading">
+  <h3 class="mb-5 text-[36px] font-bold">Organization jobs</h3>
+  <ul class="flex w-full flex-col gap-5">
+    <li *ngFor="let job of jobs; trackBy: trackById">
+      <app-applicant-item
+        (jobDeactivated)="onJobDeactivated($event)"
+        (jobActivated)="onJobActivated($event)"
+        (jobEdited)="onJobEdited($event)"
+        [job]="job"></app-applicant-item>
+    </li>
+  </ul>
+  <p *ngIf="!jobs?.length" class="text-[24px] font-semibold">No jobs...</p>
+</div>
